#32: Order: API: Cancel order endpoint

--- a/pda-order/src/main/resources/i18n/messages.properties
+++ b/pda-order/src/main/resources/i18n/messages.properties
@@ -1,1 +1,2 @@
 exception.order.not.found=Order with id {0} is not found in the system
+exception.order.cancel=Order could be cancelled if its status is [INITIAL, ACCEPTED, PENDING]
