#34 Order: API: change destination endpoint

--- a/pda-order/src/main/resources/i18n/messages.properties
+++ b/pda-order/src/main/resources/i18n/messages.properties
@@ -1,2 +1,3 @@
 exception.order.not.found=Order with id {0} is not found in the system
 exception.order.cancel=Order could be cancelled if its status is [INITIAL, ACCEPTED, PENDING]
+exception.order.change.destination=Order destination could not be changed if its status already in Progress
