--- a/pda-delivery/src/main/resources/i18n/messages.properties
+++ b/pda-delivery/src/main/resources/i18n/messages.properties
@@ -1,2 +1,4 @@
 exception.delivery.not.found=Delivery for order id {0} is not found
 exception.delivery.access.denied=Access to the delivery is denied
+exception.courier.not.found=Courier with user id {0} is not found
+exception.delivery.already.assigned=Delivery is already assigned
